--- a/index.html
+++ b/index.html
@@ -5,4 +5,35 @@ Ari is smart and fun</p>
 <h2>Amari is funny</h2>
 <p>Amari is smart and fun<br>
 	She is cute and can read</p>
-	
+<h2>star</h2>	
+<p>There was a star name Ari.<br>
+	Ari the star is happy</p>
+<h2>Time</h2>
+<p>time is every wair<br>
+	And every day like on a clock do you read the time?<br>
+time you us it alot like when its time to eat this is Amari out</p>
+<h2>Ari</h2>
+<P> Ari is cool<br>
+	she  is loud<br>
+And she is cute and funny</P>
+<h2>Bud</h2>
+ <p>bud is cute and funny<br>	
+he love movies like toy story and other movies</p>	
+<h2>The the things i like about Ari room</h2>
+<ol>
+<li>Ari room is pink </li>	
+<li>she have alot of baby alives</li>
+<li>she have alot of dress</li>
+<li>Ari room is very cute</li>	
+</ol>
+<h2>Bud love crash the game</h2>
+<p>Bud like when you play it for him.<br>
+	he like when cash get hurt.</p>	
+<h2>Neil and Ari </h2>
+<p> Ari and Neil are so cute</p>
+<h2>To be a doctor</h2>
+<ol>
+<li>Have tools </li>	
+<li>make people fell better</li>	
+<li>learn the steps to be a good doctor</li>	
+</ol>
